Update to 1.21.4, ChatColor retirement