@@ -3,18 +3,22 @@
 
   <groupId>ob-mc.net</groupId>
   <artifactId>OBSpawnControl</artifactId>
-  <version>1.0</version>
   <name>OBSpawnControl</name>
-  <description>Simple Spawn management plugin for our lobby</description>
+  <version>1.1</version>
+  <description>Spawn point management for a lobby or server</description>
+  <url>http://ob-mc.net</url>
+  <packaging>jar</packaging>
 
   <properties>
+    <api-version>1.21</api-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <build>
 
-    <finalName>${project.name}</finalName>
+    <finalName>${project.name}-${project.version}</finalName>
 
+    <!-- ensure plugin.yml gets the tags updated -->
     <resources>
       <resource>
         <targetPath>.</targetPath>
@@ -34,6 +38,10 @@
         <configuration>
           <source>21</source>
           <target>21</target>
+          <compilerArgs>
+            <arg>-Xlint:-options</arg>
+            <arg>-proc:full</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
